[project]
name = "ranlib"
version = "0.1.0"
description = "RAN library"
authors = [
  { name = "AmeerArsala", email = "ameer.arsala03@gmail.com" },
  { name = "ShanMehr", email = "ishanmeher25@gmail.com" },
]
requires-python = ">= 3.9"
dependencies = [
  "typer >=0.12.3, <0.13",
  "pydantic >=2.8.2, <2.9",
  "tomli >=2.0.1, <2.1",
  "tomli-w >=1.0.0, <1.1",
  "gitpython >=3.1.43, <3.2",
  "pre-commit >=3.7.1, <3.8",
  "rich >=13.7.1, <13.8",
  "python-dotenv >=1.0.1, <1.1",
  "pytest >=8.2.2, <8.3", "httpx>=0.27.2,<0.28",
]

[project.scripts]
ran = "ranlib.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.tasks]
ran = "python3 ranlib/main.py"
