[project]
name = "ranlib"
version = "0.0.10"
description = "RAN library"
authors = [
  { name = "AmeerArsala", email = "ameer.arsala03@gmail.com" },
  { name = "ShanMehr", email = "ishanmeher25@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.9"
dependencies = [
  "typer >=0.12.3, <0.13",
  "pydantic >=2.8.2, <2.9",
  "tomli >=2.0.1, <2.1",
  "tomli-w >=1.0.0, <1.1",
  "gitpython >=3.1.43, <3.2",
  "rich >=13.7.1, <13.8",
  "httpx>=0.27.2,<0.28",
]

[project.urls]
Repository = "https://github.com/ran-labs/ranlib"
Changelog = "https://github.com/ran-labs/ranlib/blob/main/CHANGELOG.md"
Homepage = "https://ran.so"
Documentation = "https://ran.so/docs"
Source = "https://github.com/ran-labs/ranlib"
Tracker = "https://github.com/ran-labs/ranlib/issues"
Twitter = "https://twitter.com/RANdotSO"

[project.scripts]
ran = "ranlib.cli.main:app"

[project.optional-dependencies]
fdev = [
  "jupytext>=1.16.4,<2",
  "pytest>=8.3.2,<9",
  "hatch>=1.12.0,<2",
  "pybashify>=0.0.1,<0.0.2",
  "ruff>=0.6.8,<0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
ranlib = { path = ".", editable = true }

# [tool.pixi.tasks]
# ran = "python3 ranlib/cli/main.py"

[tool.pixi.feature.fdev.tasks]
setup = "pipelight enable git-hooks"
build = "python3 ./prebuild.py && hatch build ./dist"

[tool.pixi.environments]
dev = { features = ["fdev"] }
prod = { features = [] }
