[project]
name = "ranlib"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "ShanMehr", email = "ishanmeher25@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
ran = "ranlib.main:app"
