[project]
name = "ranlib"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "ShanMehr", email = "ishanmeher25@gmail.com"}]
requires-python = ">= 3.9"
dependencies = []

[project.scripts]
ran = "ranlib.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#[tool.pixi.scripts]
#ran = "ranlib.main:app"

[tool.setuptools]
py-modules = ["ranlib"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.tasks]
ran = "python main.py"

[tool.pixi.dependencies]
typer = ">=0.12.3,<0.13"
pydantic = ">=2.8.2,<2.9"
tomli = ">=2.0.1,<2.1"
tomli-w = ">=1.0.0,<1.1"
gitpython = ">=3.1.43,<3.2"
pre-commit = ">=3.7.1,<3.8"
rich = ">=13.7.1,<13.8"
python-dotenv = ">=1.0.1,<1.1"
pytest = ">=8.2.2,<8.3"
requests = ">=2.32.3,<2.33"
numpy = { version = ">=1.23.1,<1.24.0", channel = "conda-forge" }
regex = ">=2024.5.15,<2024.6"
